# VegaSCADA

./: CMakeLists.txt  LICENSE  README.md
darwin/: Info.plist
dlms/include/: AES-GCM.h  AES.h  APDU.h  AdjacentCell.h  ApplicationContextName.h  AttributeCollection.h  Authentication.h  AuthenticationMechanismName.h  BitString.h  ByteBuffer.h  ChargePerUnitScaling.h  ChargeTable.h  ChipperingEnums.h  Cipher.h  Commodity.h  CreditChargeConfiguration.h  Currency.h  DLMS.h  DLMSAccessItem.h  DLMSAccount.h  DLMSActionItem.h  DLMSActionSchedule.h  DLMSActionSet.h  DLMSActivityCalendar.h  DLMSArbitrator.h  DLMSAssociationLogicalName.h  DLMSAssociationShortName.h  DLMSAttribute.h  DLMSCaptureObject.h  DLMSCertificateInfo.h  DLMSCharge.h  DLMSClient.h  DLMSClock.h  DLMSCommunicationPortProtection.h  DLMSCompactData.h  DLMSConnectionEventArgs.h  DLMSContextType.h  DLMSConverter.h  DLMSCredit.h  DLMSData.h  (+124 more)
dlms/src/: AES-GCM.cpp  AES.cpp  APDU.cpp  AdjacentCell.cpp  ApplicationContextName.cpp  AuthenticationMechanismName.cpp  BitString.cpp  ByteBuffer.cpp  ChargePerUnitScaling.cpp  ChargeTable.cpp  Cipher.cpp  Commodity.cpp  CreditChargeConfiguration.cpp  Currency.cpp  DLMS.cpp  DLMSAccessItem.cpp  DLMSAccount.cpp  DLMSActionItem.cpp  DLMSActionSchedule.cpp  DLMSActionSet.cpp  DLMSActivityCalendar.cpp  DLMSArbitrator.cpp  DLMSAssociationLogicalName.cpp  DLMSAssociationShortName.cpp  DLMSCaptureObject.cpp  DLMSCertificateInfo.cpp  DLMSCharge.cpp  DLMSClient.cpp  DLMSClock.cpp  DLMSCommunicationPortProtection.cpp  DLMSCompactData.cpp  DLMSContextType.cpp  DLMSConverter.cpp  DLMSCredit.cpp  DLMSData.cpp  DLMSDayProfile.cpp  DLMSDayProfileAction.cpp  DLMSDemandRegister.cpp  DLMSDisconnectControl.cpp  DLMSEmergencyProfile.cpp  (+95 more)
include/: DataEntity.hpp  DataInterface.hpp  EntityAlarm.hpp  EntityAlarmFilter.hpp  EntityMeter.hpp  EntityMeterSettings.hpp  EntityStatisticsEnergy.hpp  EntityToken.hpp  EntityUserInfo.hpp  GraphData.hpp  Help.hpp  IWorkFlow.hpp  Logger.hpp  MeterReader.hpp  Mk7Mi.hpp  ProtocolState.hpp  WorkFlowAddMeter.hpp  WorkFlowConnectMeter.hpp  WorkFlowKeepAlive.hpp  WorkFlowTokenTransfer.hpp
resourcesdesktop/: VegaSCADADesktop.qrc
resourcesdesktop/qml/: AddToken.qml  AlarmSettings.qml  AvailableTokens.qml  CircularProgressBar.qml  CreateUserStage1.qml  CreateUserStage2.qml  Help.qml  Login.qml  MainWindow.qml  SplashScreen.qml
resourcesmobile/qml/: AddMeter.qml  Alarms.qml  AvailableMeters.qml  Contact.qml  CreateUserStage1.qml  CreateUserStage3.qml  CustomBarChart.qml  CustomLineChart.qml  Dashboard.qml  Energy.qml  Header.qml  MainWindow.qml  NumberKeypad.qml  QRCodeScanner.qml  ResetPasscodeStage1.qml  ResetPasscodeStage2.qml  ResetPasscodeStage3.qml  Settings.qml
src/: Controller.cpp  DataEntity.cpp  DataInterface.cpp  EntityAlarm.cpp  EntityAlarmFilter.cpp  EntityMeter.cpp  EntityMeterSettings.cpp  EntityStatisticsEnergy.cpp  EntityToken.cpp  EntityUserInfo.cpp  Help.cpp  Logger.cpp  MeterReader.cpp  Mk7Mi.cpp  WorkFlowAddMeter.cpp  WorkFlowConnectMeter.cpp  WorkFlowKeepAlive.cpp  WorkFlowTokenTransfer.cpp  main.cpp
testingdata/: mindteck_meters.txt
